--- a/ng-app/src/app/header/header.component.html
+++ b/ng-app/src/app/header/header.component.html
@@ -1,7 +1,9 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="navToggle.emit()" *ngIf="isAuth"><mat-icon>menu</mat-icon></button>
+  <button mat-icon-button (click)="navToggle.emit()" *ngIf="isAuth">
+    <mat-icon>menu</mat-icon>
+  </button>
 
-  <span class="logo" routerLink="/">Ng-Node App</span>
+  <span class="logo" routerLink="/">EvtOrg-MS</span>
 
   <ng-container *ngIf="!isAuth">
     <a routerLink="/auth/login" mat-button *ngIf="!isAuth">Login</a>
