--- a/ng-app/src/app/user/user-form/user-form.component.html
+++ b/ng-app/src/app/user/user-form/user-form.component.html
@@ -21,7 +21,7 @@
         <input matInput formControlName="phoneNumber" placeholder="Phone Number" required />
       </mat-form-field>
       <!-- images -->
-      <div class="image-wrapper">
+      <!-- <div class="image-wrapper">
         <label for="">Avatar Image</label>
         <div class="image-picker">
           <button mat-stroked-button type="button" (click)="filePicker.click()"><mat-icon>photo</mat-icon> Pick Image</button>
@@ -45,7 +45,7 @@
           <img [src]="formData.value.signatureImageUrl" *ngIf="formData.value.signatureImageUrl && !imagesPreview.signatureImage">
         </div>
       </div>
-      {{ formData.value | json }}
+      {{ formData.value | json }} -->
     </form>
   </mat-card-content>
   <mat-card-actions>
