--- a/ng-app/src/app/standard/standard-form/standard-form.component.html
+++ b/ng-app/src/app/standard/standard-form/standard-form.component.html
@@ -1,19 +1,17 @@
 <mat-card class="card-md">
-  <mat-card-header>
-    <mat-card-title>{{ formData._id ? 'Edit' : 'New'}} {{ title }}</mat-card-title>
-    <mat-card-subtitle>Please fill-in all the required fields marked with asterisks (*).</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <form #form="ngForm" id="form" (ngSubmit)="form.valid && onSubmit()">
-      <app-standard-form-field [field]="field" [(formData)]="formData" *ngFor="let field of fields"></app-standard-form-field>
-    </form>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button type="button" (click)="onCancel('/' + domainName + '/list')">
-      <mat-icon>arrow_back_ios</mat-icon> Cancel
-    </button>
-    <button mat-raised-button color="primary" type="submit" form="form">
-      <mat-icon>done</mat-icon> Submit
-    </button>
-  </mat-card-actions>
+    <mat-card-header>
+        <mat-card-title>{{ formData._id ? 'Edit' : 'New' }} {{ title }}</mat-card-title>
+        <mat-card-subtitle>Please fill-in all the required fields marked with asterisks (*).</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <form #form="ngForm" id="form" (ngSubmit)="form.valid && onSubmit()">
+            <app-standard-form-field [field]="field" [(formData)]="formData" *ngFor="let field of fields"></app-standard-form-field>
+        </form>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-raised-button type="button" (click)="onCancel('/' + domainName + '/list')">
+            <mat-icon>arrow_back_ios</mat-icon> Cancel
+        </button>
+        <button mat-raised-button color="primary" type="submit" form="form"><mat-icon>done</mat-icon> Submit</button>
+    </mat-card-actions>
 </mat-card>
