add new property `add()` for custom table add item in new row with dialog form

--- a/ng-app/src/app/provider/receipt-form/receipt-form.component.html
+++ b/ng-app/src/app/provider/receipt-form/receipt-form.component.html
@@ -1,1 +1,1 @@
-<app-standard-form title="Receipt" domainName="receipt" [fields]="fields" [includes]="['provider','supplier-invoice']"></app-standard-form>
+<app-standard-form title="Receipt" domainName="receipt" [fields]="fields" [includes]="['provider','supplier-invoice']" [(dataSource)]="formData"></app-standard-form>
