--- a/ng-app/src/app/templates/dialog-form/dialog-form.component.html
+++ b/ng-app/src/app/templates/dialog-form/dialog-form.component.html
@@ -1,2 +1,2 @@
-<app-standard-form [title]="data.title" [fields]="fields" domainName="event" [dataSource]="formData" (cancel)="onNoClick()"></app-standard-form>
+<app-standard-form [title]="title" [fields]="fields" [callback]="callback" [domainName]="params.domain" [dataSource]="formData" (cancel)="onNoClick($event)" (submitFunc)="submitFunc($event)"></app-standard-form>
 
