--- a/ng-app/src/app/event/event-view/event-view.component.css
+++ b/ng-app/src/app/event/event-view/event-view.component.css
@@ -3,3 +3,12 @@
     padding: 5px 10px;
     margin-bottom: 10px;
 }
+
+.btn-sm {
+  padding: 0 5px;
+  line-height: 25px;
+}
+
+.btn-group button {
+  margin: 0 5px;
+}
