--- a/ng-app/src/styles.css
+++ b/ng-app/src/styles.css
@@ -1,131 +1,139 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-table { width: 100%; }
+html,
+body {
+    height: 100%;
+}
+body {
+    margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+table {
+    width: 100%;
+}
 
 .mat-icon.icon-xs {
-  font-size: 1.3rem;
+    font-size: 1.3rem;
 }
 
 .mat-icon.icon-md {
-  font-size: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .mat-icon.icon-lg {
-  font-size: 1.7rem;
+    font-size: 1.7rem;
 }
 
-.mat-card[class*="card-"] {
-  margin: 0 auto;
+.mat-card[class*='card-'] {
+    margin: 0 auto;
 }
 
 .mat-card.card-xs {
-  max-width: 576px;
+    max-width: 576px;
 }
 
 .mat-card.card-sm {
-  max-width: 768px;
+    max-width: 768px;
 }
 
 .mat-card.card-md {
-  max-width: 992px;
+    max-width: 992px;
 }
 
 .mat-card.card-lg {
-  max-width: 1200px;
+    max-width: 1200px;
 }
 
-.mat-card[class*="card-"] mat-form-field {
-  width: 100%;
+.mat-card[class*='card-'] mat-form-field {
+    width: 100%;
 }
 
 .action-group {
-  padding: 10px 0;
+    padding: 10px 0;
 }
 
 .standard-filter {
-  margin: 10px;
+    margin: 10px;
 }
 
 .standard-filter .mat-form-field {
-  padding: 0 5px;
+    padding: 0 5px;
 }
 
 .standard-table.mat-table .mat-column-audit-updatedDate {
-  width: 150px;
+    width: 150px;
 }
 
 .standard-table.mat-table .mat-column-action {
-  width: 250px;
+    width: 250px;
 }
 
 .standard-table.mat-table .mat-column-action button {
-  padding: 0 8px;
-  margin: 0 5px;
+    padding: 0 8px;
+    margin: 0 5px;
 }
 
 .standard-table.mat-table .mat-column-action button .mat-icon {
-  vertical-align: middle !important;
+    vertical-align: middle !important;
 }
 
 .standard-table th.mat-sort-header-sorted {
-  color: black;
+    color: black;
 }
 
 .standard-table .number-form-fields {
-  display: inline-block;
+    display: inline-block;
 }
 
 .standard-table .mat-paginator {
-  margin-top: 1rem;
+    margin-top: 1rem;
 }
 
 .standard-table .mat-column-select {
-  width: 50px;
+    width: 50px;
 }
 
 .standard-table .mat-column-audit-updatedDate {
-  width: 150px;
+    width: 150px;
 }
 
 .standard-table .mat-column-action {
-  width: 200px;
-  text-align: center;
+    width: 200px;
+    text-align: center;
 }
 
 .standard-table .mat-column-action button {
-  padding: 0 8px;
-  margin: 0 5px;
+    padding: 0 8px;
+    margin: 0 5px;
 }
 
 .standard-table a:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .image-wrapper .input-file {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .image-wrapper .image-picker {
-  margin: 1rem 0;
+    margin: 1rem 0;
 }
 
 .image-wrapper .image-preview {
-  height: 5rem;
-  margin: 1rem 0;
+    height: 5rem;
+    margin: 1rem 0;
 }
 
 .image-wrapper .image-preview img {
-  height: 100%;
+    height: 100%;
 }
 
 .action-group > .mat-raised-button {
-  margin: 0 5px;
+    margin: 0 5px;
 }
 
 .view-page .mat-expansion-panel {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .view-page .bg-primary,
@@ -133,14 +141,14 @@ table { width: 100%; }
 .view-page .bg-primary.mat-expanded:focus,
 .view-page .mat-expansion-panel:not(.mat-expanded) .bg-primary,
 .view-page .mat-expansion-panel:not(.mat-expanded) .bg-primary:hover {
-  background-color: #007bff;
+    background-color: #007bff;
 }
 
 .view-page .bg-primary .mat-expansion-panel-header-title,
 .view-page .bg-primary .mat-expansion-indicator:after {
-  color: #fff;
+    color: #fff;
 }
 
-.view-page .view-field p {
-  font-size: 16px;
+.view-page .view-field span {
+    font-weight: normal;
 }
