add send form link to email (static email)

--- a/ng-app/src/app/event/event-view/event-view.component.html
+++ b/ng-app/src/app/event/event-view/event-view.component.html
@@ -161,6 +161,9 @@
                     <button mat-raised-button (click)="copyRegistrationFormLink(registrationForm?._id)" value="click to copy">
                         <mat-icon>link</mat-icon> Copy Link
                     </button>
+                    <button mat-raised-button (click)="sendRegistrationFormLink(registrationForm?._id)" value="click to send">
+                        <mat-icon>link</mat-icon> Send Link
+                    </button>
                 </div>
 
                 <h4>Basic Information</h4>
