add venue in event model & add field in event form & view page

--- a/ng-app/src/app/event/event-view/event-view.component.html
+++ b/ng-app/src/app/event/event-view/event-view.component.html
@@ -31,7 +31,9 @@
                 <h3>
                     Time: <span>{{ formData.timeFrom | date: 'hh:mm a' }} - {{ formData.timeTo | date: 'hh:mm a' }}</span>
                 </h3>
-                <!-- <h3>Total Budget (RM): <span>{{ formData.totalBudgetAmount | currency }}</span></h3> -->
+                <h3>
+                    Venue: <span>{{ formData.venue }}</span>
+                </h3>
             </div>
         </mat-expansion-panel>
 
