fixed: autocomplete cant filter options

--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -47,7 +47,7 @@
 
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn"
       (optionSelected)="field.refChange && field.refChange($event, formData)">
-      <mat-option *ngFor="let option of field.refOptions" [value]="option">{{ option[field.refName] }}</mat-option>
+      <mat-option *ngFor="let option of (field.refOptions | filterOptions: formData[field.name])" [value]="option">{{ option[field.refName] }}</mat-option>
     </mat-autocomplete>
   </mat-form-field>
 
