link customer to event

--- a/ng-app/src/app/event/event-form/event-form.component.html
+++ b/ng-app/src/app/event/event-form/event-form.component.html
@@ -1,1 +1,1 @@
-<app-standard-form title="Event" [fields]="fields" domainName="event"></app-standard-form>
+<app-standard-form title="Event" [fields]="fields" domainName="event" [includes]="includes"></app-standard-form>
